--- a/06_GUI/styles.css
+++ b/06_GUI/styles.css
@@ -3,7 +3,7 @@ Test {
     background-color: #FFFEFC;
     background-color: #F2E4D8;
     background-color: #729DA6;
-    background-color: #729DA6;
+    background-color: #D8EEF2;
 }
 
 body {
