--- a/06_GUI/styles.css
+++ b/06_GUI/styles.css
@@ -1,61 +1,104 @@
-Test {
-    background-color: #A69383;
-    background-color: #FFFEFC;
-    background-color: #F2E4D8;
-    background-color: #729DA6;
-    background-color: #D8EEF2;
-}
-
-body {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    height: 100vh;
-    width: 100vw;
+QWidget {
+    background-color: #f3f3f3;
+    color: #212226;
     font-family: Montserrat;
 }
 
-#Button {
-    background-color: white;
-    border: 1px solid black;
+/* ---------------------------------------------------------------------------------------------------------- */
+
+QMenu {
+    background-color: black;
+    color: transparent;
+    border: 1px solid #666A73;
+    font-size: 10px;
+}
+
+QMenu::item {
+    background-color: #f3f3f3;
+    color: #666A73;
+    margin: 0;
+    padding: 4px;
+    padding-right: 40px;
+}
+
+QMenu::item:selected {
+    background-color: #9FA3A6;
+    color: #222326;
+}
+
+QMenuBar::item {
+    color: #212226;
+    margin: 4px;
+    border: 1px solid #666A73;
+    border-radius: 4px;
+    padding: 4px 8px;
+    font-size: 8px;
+}
+
+QMenuBar::item:selected {
+    border: 1px solid #3C3D40;
+    color: black;
+}
+
+QMenuBar::item:pressed {
+    border: 1px solid #3C3D40;
+    background-color: #3C3D40;
+    color: #ffffff;
+}
+
+/* ---------------------------------------------------------------------------------------------------------- */
+
+QPushButton {
+    background-color: transparent;
+    border: 1px solid #666A73;
     padding: 10px 20px;
 }
 
-#Button:hover {
-    background-color: whitesmoke;
-    cursor: pointer;
+QPushButton:hover {
+    border: 1px solid #3C3D40;
 }
 
-#Button[customClass='StartButton'] {
+QPushButton:pressed {
+    background-color: #3C3D40;
+    border: 1px solid #3C3D40;
+    color: #D7D7D9;
+}
+
+QPushButton[customClass='StartButton'] {
     width: 40%;
 }
 
-CustomWindow {
-    background-color: #FFFEFC;
+/* ---------------------------------------------------------------------------------------------------------- */
+
+QGroupBox {
+    border: 1px solid #666A73;
 }
 
-#rgbLabel {
-    background-color: rgba(255, 255, 255, 0.5);
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    padding: 6px;
+/* ---------------------------------------------------------------------------------------------------------- */
+
+QRadioButton:unchecked {
+    color: #666A73;
+}
+
+QRadioButton:checked {
+    color: #222326;
+}
+
+QRadioButton::indicator {
+    width: 7px;
+    height: 7px;
     border-radius: 4px;
-    font-weight: 700;
 }
 
-.CustomWindow {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    width: 20vw;
-    height: 60vh;
-    background-color: whitesmoke;
+QRadioButton::indicator:checked {
+    border: 1px solid #222326;
 }
+
+QRadioButton::indicator:unchecked {
+    border: 1px solid #666A73;
+}
+
+/* ---------------------------------------------------------------------------------------------------------- */
 
 QLabel[customClass='LOGO'] {
     background-color: whitesmoke;
